--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <h1>Hello world!</h1>
+    <div><img src="IMG_20220311_145711.jpg" alt="Hello World from Space"
+        style="width:100%;max-width:960px"></div>
 <p>This is the first file in my new Git Repo.</p> 
 <p>A line in our file</p>
 </body>
