Added a new image

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         style="width:100%;max-width:960px"></div>
 <p>This is the first file in my new Git Repo.</p> 
 <p>A line in our file</p>
+<div><img src="IMG_20220327_183506.jpg" alt="Guri"></div>
 </body>
 </html>
